--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Virtual environments
+myenv/
+venv/
+.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -179,3 +184,13 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Data
+data/raw/
+data/processed/
+
+# Models
+*.pkl
+
+# OS
+.DS_Store
