--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-pandas
-numpy
-scikit-learn
-lightgbm
-shap
 fastapi
 uvicorn
-pytest
-pyyaml
-matplotlib
-seaborn
+pandas
+numpy
+lightgbm
+pydantic
+pyarrow
 joblib
