add model artifact for CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Run Tests
       run: |
         mkdir -p logs
+        ls artifacts/
         python -m pytest tests/
 
     - name: Build Docker Image
