--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Run Tests
       run: |
         mkdir -p logs
-        ls artifacts/
+        ls artifacts/schema/
         python -m pytest tests/
 
     - name: Build Docker Image
